--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   video_player: 2.4.10
   visibility_detector: 0.3.3
   google_fonts: ^6.1.0
+  go_router: 6.0.2
+  camera: ^0.10.5+7
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
