--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,12 @@ dependencies:
   font_awesome_flutter: 10.3.0
   video_player: 2.4.10
   visibility_detector: 0.3.3
-  google_fonts: ^6.1.0
+  google_fonts: 4.0.1
   go_router: 6.0.2
   camera: ^0.10.5+7
   permission_handler: ^11.1.0
+  gallery_saver: 2.3.2
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
