--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   permission_handler: 11.0.0
   gallery_saver: 2.3.2
   image_picker: ^1.0.5
+  provider: 6.0.5
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
