--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.0.5
   provider: 6.0.5
   shared_preferences: ^2.2.2
+  flutter_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
